<resources>
    <string name="app_name">Seguranca Social</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nota_bene">NB: HIli durasaun fulan wainhira serbisu liu tinan (ano completo). Px: Tinan 3 fulan 4 ou tinan 5 fulan 9. Caso serbisu pas-pas tinan 1 ou 2 ou 5, então laprecisa hili fulan número fulan serbisu.</string>
    <string name="salario_mensal">Salário Mensal</string>
    <string name="salario_mensal_ex">Ex: 150</string>
    <string name="numero_tinan_serbisu">Número Tinan Serbisu</string>
    <string name="numero_fulan_serbisu">Número Fulan Serbisu</string>
    <string name="calcula">Calcula</string>
    <string name="resultado">Resultado</string>

    <string-array name="fulan">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="tinan">
        <item></item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>

    </string-array>
</resources>
