<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadorActivity"
    android:paddingTop="15dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:orientation="vertical"
    android:background="@color/color_blueOverlay"
    android:id="@+id/calculadorMainLayout">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSalarioMensal"
        android:text="@string/salario_mensal"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salario_mensal_ex"
        android:textSize="24sp"
        android:id="@+id/etSalarioMensal"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numero_tinan_serbisu"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <Spinner
        android:id="@+id/spinnerTinan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:textSize="24sp"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numero_fulan_serbisu"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <Spinner
        android:id="@+id/spinnerFulan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:textSize="24sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#fff"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota_bene"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="italic"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcula"
        android:id="@+id/btnCalculaValor"
        android:background="@color/black_overlay"
        style="?metaButtonBarButtonStyle"
        android:layout_marginTop="24dp"
        android:textColor="#fff"
        android:textSize="20sp"
        />


    <LinearLayout
        android:id="@+id/linearLayoutResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#fff"
            />

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/resultado"
            />

    </LinearLayout>

</LinearLayout>